--- a/Onboarding2.html
+++ b/Onboarding2.html
@@ -48,7 +48,7 @@
 
           <h6 class="text-muted">By proceeding you agree to the <a href="/">terms and condtions of Aero</a> and its <a href="">privacy and communications policy</a></h6>
 
-          <a class="btn btn-primary w-100" href="C:\Users\admin\Desktop\Fintabassignment\regsuccess.html" role="button">Proceed</a>
+          <a class="btn btn-primary w-100" href="https://github.com/TwinkleSaroy/fintab-2nd-asgn-sample/edit/main/Onboarding2.html" role="button">Proceed</a>
       
     </div>
 </body>
