--- a/Onboarding1.html
+++ b/Onboarding1.html
@@ -40,7 +40,7 @@
           </div>
           <br/><div><br/><br/></div>
         
-          <a class="btn btn-primary w-100" href="C:\Users\admin\Desktop\Fintabassignment\Onboarding2.html" role="button">I want this!</a>
+          <a class="btn btn-primary w-100" href="https://twinklesaroy.github.io/fintab-2nd-asgn-sample/Onboarding2.html" role="button">I want this!</a>
       
     </div>
 </body>
