--- a/Onboarding2.html
+++ b/Onboarding2.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="ml-5 mr-5">
-    <img class="py-3 "  src ="C:\Users\admin\Desktop\Fintabassignment\images\Speed_logo.png" alt='' ></img>  
+    <img class="py-3 "  src ="https://twinklesaroy.github.io/fintab-2nd-asgn-sample/images/Speed_logo.png" alt='' ></img>  
         <h6>just give us some basic details</h6>
 
 
