--- a/regsuccess.html
+++ b/regsuccess.html
@@ -16,7 +16,7 @@
     <div class="text-center">
     <h5 class="text-muted py-3">Successful Registration</h5>
     <br/>
-    <img class="py-3 "  src ="C:\Users\admin\Desktop\Fintabassignment\images\Success_Icon.png" alt='' ></img>  <br/><br/>
+    <img class="py-3 "  src ="https://twinklesaroy.github.io/fintab-2nd-asgn-sample/images/Success_Icon.png" alt='' ></img>  <br/><br/>
 
     <h5 class="text-muted py-3">Your Speed Checkout account is setup!<br/>
     You're ready to supercharge your sales</h5>
